Second set of log replication tests done.

--- a/WebSimulation/Components/Pages/Home.razor
+++ b/WebSimulation/Components/Pages/Home.razor
@@ -42,6 +42,9 @@
             <div>
                 Node they think is the leader: @node.leaderId
             </div>
+            <div>
+                @* <button @onclick="() => Pause(nodes, node.Id)">Pause</button> *@
+            </div>
         </div>
     </div>
 }
